skins/larry/styles.css
/* ... */
.dropbutton .dropbuttontip {
	display: block;
	position: absolute;
	right: 0;
	top: 0;
	height: 42px;
	width: 18px;
	background: url(images/buttons.png) 0 -1255px no-repeat;
	cursor: pointer;
}

.dropbutton .dropbuttontip:hover {
	background-position: -26px -1255px;
}

.dropbutton a.button.disabled + .dropbuttontip {
	opacity: 0.5;
	filter: alpha(opacity=50);
}

.dropbutton a.button.disabled + .dropbuttontip:hover {
	background-position: 0 -1255px;
}

.dropbutton a.button {
    margin-left: 0;
    padding-left: 0;
    margin-right: 0;
    padding-right: 0;
}

.toolbar a.button.back {
	background-position: 0 -1216px;
}

.toolbar a.button.checkmail {
	background-position: center -1176px;
}

.toolbar a.button.compose {
	background-position: center -530px;
}

.toolbar a.button.reply {
	background-position: center -570px;
}

.toolbar a.button.reply-all {
	min-width: 64px;
	background-position: left -610px;
}

.toolbar a.button.forward {
	min-width: 64px;
	background-position: left -650px;
}

.toolbar a.button.delete {
	background-position: center -690px;
}

.toolbar a.button.archive {
	background-position: center -730px;
}

.toolbar a.button.junk {
	background-position: center -770px;
}

.toolbar a.button.print {
	background-position: center -810px;
}

.toolbar a.button.markmessage {
	background-position: center -1094px;
}

.toolbar a.button.more {
	background-position: center -850px;
}

.toolbar a.button.attach {
	background-position: center -890px;
}

.toolbar a.button.spellcheck {
	min-width: 64px;
	background-position: left -930px;
}

.toolbar a.button.spellcheck.selected {
	background-position: left -1580px;
	color: #1978a1;
}

.toolbar a.button.insertsig {
	background-position: center -1135px;
}

.toolbar a.button.search {
	background-position: center -970px;
}

.toolbar a.button.import {
	background-position: center -1012px;
}

.toolbar a.button.export {
	background-position: center -1054px;
}

a.menuselector {
	display: inline-block;
	border: 1px solid #ababab;
	border-radius: 4px;
	background: #f8f8f8;
	background: -moz-linear-gradient(top, #f8f8f8 0%, #dddddd 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
	background: -o-linear-gradient(top, #f8f8f8 0%, #dddddd 100%);
	background: -ms-linear-gradient(top, #f9f9f9 0%, #dddddd 100%);
	background: linear-gradient(top, #f8f8f8 0%, #dddddd 100%);
	text-decoration: none;
	color: #333;
	cursor: pointer;
}

a.menuselector .handle {
	display: inline-block;
	padding: 0 32px 0 6px;
	height: 20px;
	line-height: 19px;
	text-shadow: 0px 1px 1px #fff;
	background: url(images/selector.png) right center no-repeat;
	border-radius: 4px;
}

a.menuselector:active {
	background: #dddddd;
	background: -moz-linear-gradient(top, #dddddd 0%, #f8f8f8 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#dddddd), color-stop(100%,#f8f8f8));
	background: -o-linear-gradient(top, #dddddd 0%, #f8f8f8 100%);
	background: -ms-linear-gradient(top, #dddddd 0%, #f8f8f8 100%);
	background: linear-gradient(top, #dddddd 0%, #f8f8f8 100%);
	text-decoration: none;
}

select.decorated {
	position: relative;
	z-index: 10;
	opacity: 0;
	height: 22px;
	cursor: pointer;
	filter: alpha(opacity=0);
	-khtml-appearance: none;
	-webkit-appearance: none;
}

html.opera select.decorated {
	opacity: 1;
}

select.decorated option {
	color: #fff;
	background: #444;
	border: 0;
	border-top: 1px solid #5a5a5a;
	border-bottom: 1px solid #333;
	text-shadow: 0px 1px 1px #333;
	padding: 4px 6px;
	outline: none;
}


/*** quota indicator ***/

#quotadisplay {
	left: 6px;
	font-size: 12px;
	font-weight: bold;
	text-shadow: 0px 1px 1px #fff;
	padding-left: 30px;
	height: 18px;
	background: url(images/quota.png) -100px 0 no-repeat;
}

/*** popup menus ***/

.popupmenu,
#rcmKSearchpane {
	display: none;
	position: absolute;
	top: 32px;
	left: 90px;
	width: auto;
	background: #444;
	border: 1px solid #999;
	z-index: 240;
	border-radius: 4px;
	box-shadow: 0 2px 6px 0 #333;
	-moz-box-shadow: 0 2px 6px 0 #333;
	-webkit-box-shadow: 0 2px 6px 0 #333;
	-o-box-shadow: 0 2px 6px 0 #333;
}

.popupmenu.dropdown {
	border-radius: 0 0 4px 4px;
	border-top: 0;
}

ul.toolbarmenu,
#rcmKSearchpane ul {
	margin: 0;
	padding: 0;
	list-style: none;
}

.googie_list td,
ul.toolbarmenu li,
#rcmKSearchpane ul li {
	color: #fff;
	white-space: nowrap;
	min-width: 130px;
	margin: 0;
	border-top: 1px solid #5a5a5a;
	border-bottom: 1px solid #333;
}

.googie_list tr:first-child td,
ul.toolbarmenu li:first-child,
select.decorated option:first-child {
	border-top: 0;
}

.googie_list tr:last-child td,
ul.toolbarmenu li:last-child,
select.decorated option:last-child {
	border-bottom: 0;
}

.googie_list td span,
ul.toolbarmenu li a {
	display: block;
	color: #666;
	text-shadow: 0px 1px 1px #333;
	text-decoration: none;
	min-height: 14px;
	padding: 6px 10px 6px 10px;
}

.googie_list td span {
	padding: 3px 10px;
}

.googie_list td span,
ul.toolbarmenu li a.active {
	color: #fff;
	cursor: default;
}

.googie_list td.googie_list_onhover,
ul.toolbarmenu li a.active:hover,
#rcmKSearchpane ul li.selected,
select.decorated option:hover,
select.decorated option[selected='selected'] {
	background-color: #00aad6;
	background: -moz-linear-gradient(top, #00aad6 0%, #008fc9 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#00aad6), color-stop(100%,#008fc9));
	background: -o-linear-gradient(top, #00aad6 0%, #008fc9 100%);
	background: -ms-linear-gradient(top, #00aad6 0%, #008fc9 100%);
	background: linear-gradient(top, #00aad6 0%, #008fc9 100%);
}

ul.toolbarmenu.iconized li a,
ul.toolbarmenu.selectable li a {
	padding-left: 30px;
}

ul.toolbarmenu.selectable li a.selected {
	background: url(images/messages.png) 4px -27px no-repeat;
}

ul.toolbarmenu li label {
	display: block;
	color: #fff;
	padding: 4px 8px;
	text-shadow: 0px 1px 1px #333;
}

ul.toolbarmenu li a.icon {
	color: #eee;
	padding: 2px 6px;
}
/* ... */

